fixed jupiter being too big

--- a/css/jupiter.css
+++ b/css/jupiter.css
@@ -13,7 +13,7 @@ body {
 .bg-image {
 	position: fixed;
 	z-index: -2;
-	height: 98%%;
+	height: 98%;
 }
 
 .mask {
